--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,6 +5,10 @@
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/splashscreen</item>
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+           <item name="android:statusBarColor">@color/splashscreen_statusbar_color</item>
+           
+         <item name="android:windowLightStatusBar">true</item> 
+
     </style>
 
 </resources>
